test/sematest/valid/identifier_system_in_scope2.java
class A {
  public int System;

  public static void main(String[] args) {}

  public void test() {
    int a = System + 3;
  }
}
