test/sematest/invalid/assign_to_int.java
class Test {
  public static void main(String[] args) {}
  public void test() {
    5 = 5;
    5 = 5 + 7;
  }
}
